[FIX] - Fix offset logic on iOS devices.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -563,7 +563,7 @@ hr.dotted {
     padding-bottom: 20px;
     opacity: 1; /* fully visible by default */
     transition: opacity 0.5s ease; /* transition for opacity changes */
-    scroll-margin-top: 130px;
+    scroll-margin-top: 210px;
 }
 
 .release-title, .mix-title {
